One file is enough

--- a/json-select-transform.cabal
+++ b/json-select-transform.cabal
@@ -14,8 +14,7 @@ build-type:          Simple
 
 library
   exposed-modules:
-    Data.JSON
-    Data.JSON.Select
+    Data.JSON.SelectTransform
   -- other-modules:
   -- other-extensions:
   build-depends:
